--- a/templates/besluit-subsidie-ap.j2
+++ b/templates/besluit-subsidie-ap.j2
@@ -1,4 +1,4 @@
-{% extends "ap.j2" %}
+{% extends "ap2.j2" %}
 
 {% block introduction %}
 	<p>Dit document beschrijft het <strong>applicatieprofiel</strong> <strong>{{ title }}</strong>.
